# ai-sales-doctor-mvp-server

./: .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2bb67eba442b_create_leads_table.py  5cb9b07fcbd5_adjust_lead_and_industry_table.py  65c753e7535c_create_industry_table.py
app/api/v1/: industry_router.py  lead_router.py
app/core/: config.py  database.py  handlers.py  logger.py  middleware.py
app/models/: industry.py  lead.py
app/repositories/: industry_repository.py  lead_repository.py
app/schemas/: base.py  industry.py  lead.py
app/services/: industry_services.py  lead_services.py
