[project]
name = "ai-sales-doctor-mvp-server"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "psycopg2-binary",
  "alembic",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "pydantic[email]"
]

[project.scripts]
app = "app:app"

[tool.vercel.scripts]
build = "python build.py"